[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/player/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/imgs/crosshair.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/macGun.png" type="Texture" id=3]
[ext_resource path="res://assets/text/Righteous-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/imgs/bombCrosshair.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/windHair.png" type="Texture" id=6]
[ext_resource path="res://assets/imgs/rocketCrosshair.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.345098, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="G" type="Node2D" parent="."]

[node name="macGun" type="Node2D" parent="G"]
visible = false

[node name="ProgressBar" type="ProgressBar" parent="G/macGun"]
margin_left = 590.0
margin_top = 410.0
margin_right = 690.0
margin_bottom = 426.0
rect_min_size = Vector2( 100, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 90.0
step = 5.0
value = 45.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="G/macGun"]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Tween2" type="Tween" parent="G/macGun"]

[node name="sniper" type="Node2D" parent="G"]
visible = false

[node name="Sprite" type="Sprite" parent="G/sniper"]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="G/sniper"]

[node name="rockets" type="Node2D" parent="G"]

[node name="Sprite" type="Sprite" parent="G/rockets"]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="G/rockets"]

[node name="shotGun" type="Node2D" parent="G"]

[node name="Sprite" type="Sprite" parent="G/shotGun"]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="G/shotGun"]

[node name="ProgressBar" type="ProgressBar" parent="G/shotGun"]
margin_left = 590.0
margin_top = 410.0
margin_right = 690.0
margin_bottom = 426.0
rect_min_size = Vector2( 100, 16 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
max_value = 90.0
step = 5.0
value = 45.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wind" type="Node2D" parent="G"]
visible = false

[node name="Tween" type="Tween" parent="G/wind"]

[node name="Sprite" type="Sprite" parent="G/wind"]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="gernades" type="Node2D" parent="G"]
visible = false

[node name="Tween2" type="Tween" parent="G/gernades"]

[node name="Sprite" type="Sprite" parent="G/gernades"]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="HUD" type="Node2D" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
margin_left = 25.2269
margin_top = 618.9
margin_right = 629.227
margin_bottom = 718.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpLabel" type="Label" parent="HUD/HBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 3 )
text = "HP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammoLabel" type="Label" parent="HUD/HBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 3 )
text = "AMMO"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 1281.0
margin_bottom = 719.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goToColor" type="Tween" parent="HUD/ColorRect"]

[node name="goBackToRegular" type="Tween" parent="HUD/ColorRect"]
